Se hizo el boton de JOIN

--- a/buttons.html
+++ b/buttons.html
@@ -1,15 +1,40 @@
 <style>
-    button {
-        background-color: red;
+    .subscribe-button {
+        background-color: rgb(216, 0, 0);
         color: white;
         height: 40px;
         width: 105px;
         border-width: 0px;
         border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .join-button {
+        background-color: white;
+        color: rgb(0, 89, 255);
+        height: 40px;
+        width: 80px;
+        border-radius: 3px;
+        border-color: rgb(0, 89, 255);
+        cursor: pointer;
+    }
+
+    .tweet-button {
+        background-color: deepskyblue;
+        color: white;
+        border-radius: 20px;
     }
 </style>
 
-<button>
+<button class="subscribe-button">
     SUBSCRIBE
+</button>
+
+<button class="join-button">
+    JOIN
+</button>
+
+<button class="tweet-button">
+    Tweet
 </button>
 
