--- a/buttons.html
+++ b/buttons.html
@@ -16,13 +16,19 @@
         width: 80px;
         border-radius: 3px;
         border-color: rgb(0, 89, 255);
+        font-weight: bold;
         cursor: pointer;
     }
 
     .tweet-button {
         background-color: deepskyblue;
         color: white;
+        height: 35px;
+        width: 70px;
+        font-weight: bold;
+        border-width: 0px;
         border-radius: 20px;
+        cursor: pointer
     }
 </style>
 
