Se agregó la estructura de HTML

--- a/lesson-4/buttons.html
+++ b/lesson-4/buttons.html
@@ -1,62 +1,36 @@
 <style>
     .subscribe-button {
-        background-color: #cc0000;
+        background-color: rgb(216, 0, 0);
         color: white;
         height: 40px;
         width: 105px;
         border-width: 0px;
         border-radius: 4px;
         cursor: pointer;
-        transition: opacity 0.15s;
-    }
-
-    .subscribe-button:hover {
-        opacity: 0.8;
-    }
-
-    .subscribe-button:active {
-        opacity: 0.5;
     }
 
     .join-button {
         background-color: white;
-        color: rgb(6, 95, 212);
+        color: rgb(0, 89, 255);
         height: 40px;
         width: 80px;
         border-radius: 3px;
-        border-color: rgb(6, 95, 212);
+        border-color: rgb(0, 89, 255);
         font-weight: bold;
         cursor: pointer;
-        transition: background-color 0.15s,
-                    color 0.15s;
-    }
-
-    .join-button:hover {
-        background-color: rgb(6, 95, 212);
-        color: white;
-    }
-
-    .join-button:active {
-        opacity: 0.5;
     }
 
     .tweet-button {
-        font-size: 15px;
-        background-color: rgb(29, 155, 240);
+        background-color: deepskyblue;
         color: white;
         height: 35px;
         width: 70px;
         font-weight: bold;
-        border: none;
+        border-width: 0px;
         border-radius: 20px;
         cursor: pointer;
-        transition: box-shadow 0.15s;
+        margin-left: 8px;
     }
-
-    .tweet-button:hover{
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    }
-
 </style>
 
 <button class="subscribe-button">
