--- a/lesson-4/4j.html
+++ b/lesson-4/4j.html
@@ -17,6 +17,9 @@
     }
 
     button:active {
+        margin-left: 3px;
+        margin-top: 3px;
+        box-shadow: 0 0 0 0;
 
     }
 </style>
