--- a/lesson-5/5f.html
+++ b/lesson-5/5f.html
@@ -1,28 +1,20 @@
-<style>
-
-    p {
-        font-family: Arial;
-    }
-
-    .precio {
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .moneda {
-        color: gray;
-    }
-</style>
-
-<p>
-    <span class="precio">1,049.61 </span> 
-    <span class="moneda">USD</span>
-</p>
-
-<p>
-    +18.05 (1.75%) today
-</p>
-
-<p>
-    After hours 1,048.00 -1.61 (0.15%)
-</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles/5f_styles.css">
+    </head>
+    <body>
+        <p>
+            <span class="precio">1,049.61 </span> 
+            <span class="moneda">USD</span>
+        </p>
+        
+        <p>
+            +18.05 (1.75%) today
+        </p>
+        
+        <p>
+            After hours 1,048.00 -1.61 (0.15%)
+        </p>
+    </body>
+</html>
