--- a/lesson-9/9b.html
+++ b/lesson-9/9b.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body></body>
+    <head>
+        <link rel="stylesheet" href="9b.css">
+    </head>
+    <body>
+        <div></div>
+    </body>
 </html>
