--- a/lesson-9/9c.html
+++ b/lesson-9/9c.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body></body>
+    <head>
+        <link rel="stylesheet" href="9c.css">
+    </head>
+    <body>
+        <div>
+            <p>Satisfied with our service?</p>
+            <button>Yes</button>
+            <button>No</button>
+        </div>
+    </body>
 </html>
