--- a/lesson-9/9f.html
+++ b/lesson-9/9f.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body></body>
+    <head>
+        <link rel="stylesheet" href="9f.css">
+    </head>
+    <body>
+        <div class="total">
+            <img src="https://raw.githubusercontent.com/SuperSimpleDev/html-css-course-2022/main/1-exercise-solutions/lesson-09/cat.jpg" alt="">
+            <div class="info">
+                <p>
+                    <span class="name"> Oliver </span>
+                    <span class="amount-friends">2 mutual friends</span> 
+                </p>
+                <button>Add Friend</button>
+            </div>
+        </div>
+    </body>
 </html>
