Hecho hasta el 12d

--- a/abstract-project/abstract.html
+++ b/abstract-project/abstract.html
@@ -23,8 +23,8 @@
         <div>
             <div class="inline">
                 <div>
-                    <div class="inline">
-                        <img src="" alt="">
+                    <div class="foto">
+                        <img src="images/net.png" alt="">
                     </div>
                     <div class="inline">
                         <p>Branches</p>
@@ -33,8 +33,8 @@
                     </div>
                 </div>
                 <div>
-                    <div class="inline">
-                        <img src="" alt="">
+                    <div class="foto">
+                        <img src="images/pieza.png" alt="">
                     </div>
                     <div class="inline">
                         <p>Manage organizations, teams and projects</p>
@@ -43,8 +43,8 @@
                     </div>
                 </div>
                 <div>
-                    <div class="inline">
-                        <img src="" alt="">
+                    <div class="foto">
+                        <img src="images/llave.png" alt="">
                     </div>
                     <div class="inline">
                         <p>Authenticate to Abstract</p>
@@ -55,8 +55,8 @@
             </div>
             <div class="inline">
                 <div>
-                    <div class="inline">
-                        <img src="" alt="">
+                    <div class="foto">
+                        <img src="images/user.png alt="">
                     </div>
                     <div class="inline">
                         <p>Manage your account</p>
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <div>
-                    <div class="inline">
-                        <img src="" alt="">
+                    <div class="foto">
+                        <img src="images/dolar.png" alt="">
                     </div>
                     <div class="inline">
                         <p>Manage billing</p>
@@ -75,8 +75,8 @@
                     </div>
                 </div>
                 <div>
-                    <div class="inline">
-                        <img src="" alt="">
+                    <div class="foto">
+                        <img src="images/conversacion.png" alt="">
                     </div>
                     <div class="inline">
                         <p>Abstract support</p>
